[package]
name = "plonky2_keccak256"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
num = { version = "0.4.0", default-features = false }
plonky2 = {path = "../plonky2/plonky2"}
plonky2_ecdsa = {path = "../plonky2-ecdsa"}
plonky2_u32 = {path = "../plonky2-u32"}

[dev-dependencies]
hex = "0.4.3"
debug_print = { version = "1.0.0" }
sha2 = { version = "0.10.6" }
sha3 = { version = "0.10.6" }
serde_json = "1.0"
criterion = "0.3"